--- a/app/src/main/res/layout/activity_main2.xml
+++ b/app/src/main/res/layout/activity_main2.xml
@@ -2,32 +2,18 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
+    android:id="@+id/activity_main2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.bing.lan.selectphoto.MainActivity">
-
+    tools:context="com.bing.lan.selectphoto.Main2Activity">
     <ImageView
         android:id="@+id/iv"
         android:layout_width="150dp"
         android:layout_height="150dp"
         android:src="@drawable/img"
     />
-    <Button
-        android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="36dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="31dp"
-        android:layout_toEndOf="@+id/iv"
-        android:layout_toRightOf="@+id/iv"
-        android:text="工具类获取"/>
-
-
 </RelativeLayout>
